--- a/app/src/main/res/layout/input_detail.xml
+++ b/app/src/main/res/layout/input_detail.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="12dp">
+    android:padding="12dp"
+    android:background="@drawable/bg2">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
